--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+spring.datasource.url= jdbc:postgresql://localhost:5432/myDb
+spring.datasource.username= myUser
+spring.datasource.password= 123
+spring.jpa.hibernate.ddl-auto=update
+students.avatar.dir.path=/avatars
+spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
+logging.level.ru.hogwarts.school.service=DEBUG
+server.port = 8080
